# sales_albums_music

./: .gitignore  README.md  main.py  pyproject.toml
core/: security.py
data/: db.py
middleware/: errors.py
models/: db_schema.py  models.py  schema.py
routers/: auth.py  product.py
